# koushou

./: .gitmodules  Cargo.toml  README.md
foobar/: foobar-0.1-x86_64.kpkg  package.kdl
pkgs/: build.sh  buildoutput.txt  main.c  mainbin
pkgs/core/autotools/: package.kdl
pkgs/core/binutils/: package.kdl
pkgs/core/dinit/: package.kdl
pkgs/core/gcc/: package.kdl
pkgs/core/glibc/: package.kdl
pkgs/core/intel-microcode/: package.kdl
pkgs/core/linux/: package.kdl
pkgs/core/linux-firmware/: package.kdl
pkgs/core/linux-headers/: package.kdl
pkgs/core/musl/: package.kdl
pkgs/core/openrc/: package.kdl
pkgs/core/s6/: package.kdl
pkgs/core/systemd/: package.kdl
pkgs/extra/cmake/: package.kdl
pkgs/extra/cmake-extra-modules/: package.kdl
pkgs/extra/fastfetch/: package.kdl
pkgs/extra/git/: package.kdl
pkgs/extra/htop/: package.kdl
pkgs/main/build-devel/: package.kdl
pkgs/main/llvm/: package.kdl
pkgs/main/llvm17/: package.kdl
pkgs/main/llvm19/: package.kdl
pkgs/main/make/: package.kdl
pkgs/rust/rust-cargo/: package.kdl
pkgs/rust/rust-clippy/: package.kdl
pkgs/rust/rust-docs/: package.kdl
pkgs/rust/rust-gdb/: package.kdl
pkgs/rust/rust-llvm-tools/: package.kdl
pkgs/rust/rust-meta/: package.kdl
pkgs/rust/rust-std/: package.kdl
pkgs/rust/rustc/: package.kdl
pkgs/x11/x11-common/: package.kdl
pkgs/x11/x11-libx11/: package.kdl
pkgs/x11/x11-libxcb/: package.kdl
pkgs/x11/x11-meta/: package.kdl
src/: depres.rs  install.rs  list.rs  main.rs  mirror.rs  mkdb.rs  package.rs  pkgdb.rs  pkgutil.rs  removal.rs  resolve.rs  sync.rs
(+5 files in other folders)
