[package]
name = "kspkg"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
kdl = { git = "https://github.com/kdl-org/kdl-rs", tag = "v6.5.0" }
clap = { version = "4.5", features = ["derive"] }
tar = "0.4"
zstd = "0.13"
tempfile = "3.10"
flate2 = "1.1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
walkdir = "2.5.0"
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.25", features = ["json"] }
toml = "0.9.8"
sha2 = "0.10.9"

[[bin]]
name = "ksmkdb"
path = "src/mkdb.rs"
